Added github link

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
   
 </footer>
   
+  <a href="https://github.com/mary-cynthia3/website/blob/main/index.html">github code</a>
+  
   <!-- Project -->
   <script src="main.js"></script>
 </body>
